src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Product_Country_Code__c</fullName>
        <description>A code representing the combiantion of user product area and country. Dental Austratlia = 101, Surgery Australia = 201 etc. Used in reports.</description>
        <formula>(Product_Area_Code__c  * 100)+ User_Country_Code__c</formula>
        <inlineHelpText>A code representing the combiantion of user product area and country. Dental Austratlia = 101, Surgery Australia = 201 etc. Used in reports.</inlineHelpText>
        <label>Product-Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>used to display profile name when data is extracted by dataloader</description>
        <formula>Profile.Name</formula>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosthetics_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TBD Prosthetics User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Access__c</fullName>
        <inlineHelpText>Select which Questionnaire the user should have access to</inlineHelpText>
        <label>Questionnaire Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Questionnaire_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>-------Austria-------</fullName>
                </value>
                <value>
                    <fullName>DI Austria</fullName>
                </value>
                <value>
                    <fullName>DI CEE</fullName>
                </value>
                <value>
                    <fullName>----------------------------Australia--------------------------------</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>--------------------Canada--------------------</fullName>
                </value>
                <value>
                    <fullName>CENTRAL CA</fullName>
                </value>
                <value>
                    <fullName>EAST CA</fullName>
                </value>
                <value>
                    <fullName>WEST CA</fullName>
                </value>
                <value>
                    <fullName>--------------------France---------------------</fullName>
                </value>
                <value>
                    <fullName>FR: DI Nord</fullName>
                </value>
                <value>
                    <fullName>FR: DI Ouest</fullName>
                </value>
                <value>
                    <fullName>FR: DI Est</fullName>
                </value>
                <value>
                    <fullName>FR: DI Sud</fullName>
                </value>
                <value>
                    <fullName>FR: DI Paris Est</fullName>
                </value>
                <value>
                    <fullName>FR: Autres</fullName>
                </value>
                <value>
                    <fullName>-----Italy-----</fullName>
                </value>
                <value>
                    <fullName>IT: DI Centro</fullName>
                </value>
                <value>
                    <fullName>IT: DI Centro Nord</fullName>
                </value>
                <value>
                    <fullName>IT: DI Centro Sud</fullName>
                </value>
                <value>
                    <fullName>IT: DI Nord Est</fullName>
                </value>
                <value>
                    <fullName>IT: DI Nord Ovest</fullName>
                </value>
                <value>
                    <fullName>IT: DI Sud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Package__c</fullName>
        <defaultValue>&apos;a2X0J0000006vavUAA&apos;</defaultValue>
        <inlineHelpText>Please enter the ID of the report package that controls which reports that the user can see in the left column of the Home tab</inlineHelpText>
        <label>Report Package</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restorative_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TBD Restorative User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_CERE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SIRONA CAD/CAM CEREC</description>
        <inlineHelpText>SIRONA CAD/CAM CEREC</inlineHelpText>
        <label>SBU Ratio (CDCM)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_ENDO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (ENDO)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_IMAG__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SIRONA Imaging systems Intra &amp; Extra Oral</description>
        <inlineHelpText>SIRONA Imaging systems Intra &amp; Extra Oral</inlineHelpText>
        <label>SBU Ratio (IMAG)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_IMPL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (IMPL)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_INST__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SIRONA Instruments</description>
        <inlineHelpText>SIRONA Instruments</inlineHelpText>
        <label>SBU Ratio (INST)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_ORTH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (ORTH)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_PREV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (PREV)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_PROS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (PROS)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_REST__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SBU Ratio (REST)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_Ratio_TRCE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SIRONA Treatment Centers</description>
        <inlineHelpText>SIRONA Treatment Centers</inlineHelpText>
        <label>SBU Ratio (TRCE)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBU_User_CountCDCM__c</fullName>
        <formula>SBU_Ratio_CERE__c * User_HQ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (CDCM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_CountENDO__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_ENDO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (ENDO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_IMAG__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_IMAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (IMAG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_IMPL__c</fullName>
        <formula>SBU_Ratio_IMPL__c * User_HQ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (IMPL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_INST__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_INST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (INST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_ORTH__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_ORTH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (ORTH)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_PREV__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_PREV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (PREV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_PROS__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_PROS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (PROS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_REST__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_REST__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (REST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU_User_Count_TRCE__c</fullName>
        <formula>User_HQ__c * SBU_Ratio_TRCE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU User Count (TRCE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Implementation_Level__c</fullName>
        <description>To be used instead of mentioneing &quot;Basic&quot; in the Profile Name. Some profiles might still need to have that tag in their name.</description>
        <label>SF Implementation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Basic</fullName>
                </value>
                <value>
                    <fullName>Sales Standard</fullName>
                </value>
                <value>
                    <fullName>Sales Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_Origin__c</fullName>
        <label>SR Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Astra Tech</fullName>
                </value>
                <value>
                    <fullName>Friadent</fullName>
                </value>
                <value>
                    <fullName>Materialise</fullName>
                </value>
                <value>
                    <fullName>Dentsply Implants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Business_Unit_SBU__c</fullName>
        <label>Strategic Business Unit (SBU)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>Limited to IMPL at the moment, controled by validation rule to enforce a value when it&apos;s an IMPL sales rep and prevent any Value when otherwise</description>
        <inlineHelpText>Use to define if user (i.e. sales representative) belongs to the clinical or lab sales force</inlineHelpText>
        <label>Sales Channel (IMPL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Channel</fullName>
                </value>
                <value>
                    <fullName>Laboratory Channel</fullName>
                </value>
                <value>
                    <fullName>Inhouse Sales</fullName>
                </value>
                <value>
                    <fullName>Simplant Channel</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                    <isActive>false</isActive>
                    <label>Clinical</label>
                </value>
                <value>
                    <fullName>Lab</fullName>
                    <isActive>false</isActive>
                    <label>Lab</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Quota_2010__c</fullName>
        <label>Sales Quota LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Quota_CY__c</fullName>
        <description>Used to set Sales Quota for Current Year. Inititially to be used only for Dental Sales Reps.
Please note that Sales Quota should be set for targeted sales against Accounts OWNED by Sales Rep in Movex.</description>
        <inlineHelpText>Used to set Sales Quota in local currency for Current Year. Inititially to be used only for Dental Sales Reps.
Please note that Sales Quota should be set for targeted sales against Accounts OWNED by Sales Rep in Movex.</inlineHelpText>
        <label>Sales Quota CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Quota_Q1__c</fullName>
        <description>Created for DI - France</description>
        <label>Sales Quota Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Quota_Q2__c</fullName>
        <description>Created for DI - France</description>
        <label>Sales Quota Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Quota_Q3__c</fullName>
        <description>Created for DI France</description>
        <label>Sales Quota Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Cloud_Special_Permissions__c</fullName>
        <label>Service Cloud Special Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send Survey</fullName>
                </value>
                <value>
                    <fullName>Edit Case as Manager</fullName>
                </value>
                <value>
                    <fullName>Enable Auto Refresh Automatically</fullName>
                </value>
                <value>
                    <fullName>Light Service Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Setup_ID__c</fullName>
        <label>Team Setup ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Ambassador</fullName>
                </value>
                <value>
                    <fullName>Area Sales Director</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>CEREC Application Specialist</fullName>
                </value>
                <value>
                    <fullName>CEREC Equipment</fullName>
                </value>
                <value>
                    <fullName>Chairside</fullName>
                </value>
                <value>
                    <fullName>Clinical Affairs</fullName>
                </value>
                <value>
                    <fullName>Clinical Development Manager</fullName>
                </value>
                <value>
                    <fullName>Clinical Implementation Specialist</fullName>
                </value>
                <value>
                    <fullName>CRM Analyst</fullName>
                </value>
                <value>
                    <fullName>CT Application Specialist</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Service Consumables</fullName>
                </value>
                <value>
                    <fullName>Customer Service Endodontics</fullName>
                </value>
                <value>
                    <fullName>Customer Service Implants</fullName>
                </value>
                <value>
                    <fullName>Customer Service Implants Contracts</fullName>
                </value>
                <value>
                    <fullName>Customer Service Key Accounts</fullName>
                </value>
                <value>
                    <fullName>Customer Service Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>DS Lab</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Field Service Technician</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global CRM</fullName>
                </value>
                <value>
                    <fullName>Imaging Equipment</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Implants + MIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT107</fullName>
                </value>
                <value>
                    <fullName>IT108</fullName>
                </value>
                <value>
                    <fullName>IT109</fullName>
                </value>
                <value>
                    <fullName>IT110</fullName>
                </value>
                <value>
                    <fullName>IT111</fullName>
                </value>
                <value>
                    <fullName>IT113</fullName>
                </value>
                <value>
                    <fullName>IT115</fullName>
                </value>
                <value>
                    <fullName>IT204</fullName>
                </value>
                <value>
                    <fullName>IT206</fullName>
                </value>
                <value>
                    <fullName>IT305</fullName>
                </value>
                <value>
                    <fullName>IT307</fullName>
                </value>
                <value>
                    <fullName>IT308</fullName>
                </value>
                <value>
                    <fullName>IT367</fullName>
                </value>
                <value>
                    <fullName>IT404</fullName>
                </value>
                <value>
                    <fullName>IT503</fullName>
                </value>
                <value>
                    <fullName>IT506</fullName>
                </value>
                <value>
                    <fullName>IT507</fullName>
                </value>
                <value>
                    <fullName>IT508</fullName>
                </value>
                <value>
                    <fullName>IT511</fullName>
                </value>
                <value>
                    <fullName>IT512</fullName>
                </value>
                <value>
                    <fullName>IT513</fullName>
                </value>
                <value>
                    <fullName>IT514</fullName>
                </value>
                <value>
                    <fullName>IT515</fullName>
                </value>
                <value>
                    <fullName>IT517</fullName>
                </value>
                <value>
                    <fullName>IT518</fullName>
                </value>
                <value>
                    <fullName>IT519</fullName>
                </value>
                <value>
                    <fullName>IT520</fullName>
                </value>
                <value>
                    <fullName>IT521</fullName>
                </value>
                <value>
                    <fullName>IT522</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_TeleSales_Team_Name__c</fullName>
        <description>Used for US DNA TeleSales Reportin</description>
        <formula>CASE( Manager.Movex_Uer_ID__c , &quot;TL01&quot;, &quot;The A Team&quot;, &quot;TL02&quot;, &quot;Call Stars&quot;, &quot;TL03&quot;,&quot;Stellar Sellers&quot;,&quot;Dentsply Sirona&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US TeleSales Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserUnique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to generate unique user counts on various reports</inlineHelpText>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Country_Abbreviation__c</fullName>
        <description>Sets the country abbreviations based on User Country. Note that HQ: DE/ HQ: SE are set as DE/SE as this fields is created for matching user records to cost/revenue transactions in reports</description>
        <formula>CASE( User_Country__c , 
&quot;Australia&quot;,&quot;AU&quot;, 
&quot;Austria&quot;,&quot;AT&quot;, 
&quot;Belgium&quot;,&quot;BE&quot;, 
&quot;Canada&quot;,&quot;CA&quot;, 
&quot;Denmark&quot;,&quot;DK&quot;, 
&quot;DEX&quot;,&quot;DEX&quot;, 
&quot;Finland&quot;,&quot;FI&quot;, 
&quot;Germany&quot;,&quot;DE&quot;, 
&quot;HQ: SE&quot;,&quot;SE&quot;,
&quot;HQ: DE&quot;,&quot;DE&quot;, 
&quot;Luxembourg&quot;,&quot;LU&quot;, 
&quot;Italy&quot;,&quot;IT&quot;, 
&quot;Japan&quot;,&quot;JP&quot;, 
&quot;Holland&quot;,&quot;NL&quot;, 
&quot;New Zealand&quot;,&quot;NZ&quot;, 
&quot;Norway&quot;,&quot;NO&quot;, 
&quot;Poland&quot;,&quot;PL&quot;, 
&quot;Portugal&quot;,&quot;PT&quot;, 
&quot;Spain&quot;,&quot;ES&quot;, 
&quot;Sweden&quot;,&quot;SE&quot;, 
&quot;Switzerland&quot;,&quot;CH&quot;, 
&quot;UK&quot;,&quot;UK&quot;, 
&quot;USA&quot;,&quot;US&quot;, 
&quot;France&quot;, &quot;FR&quot;, 
null)</formula>
        <inlineHelpText>Sets the country abbreviations based on User Country.</inlineHelpText>
        <label>User Country Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country_Code__c</fullName>
        <description>A numeric code that is representing the country 1=Australia, 2= Austria etc. Used in reports</description>
        <formula>CASE( User_Country__c , 
&quot;Australia&quot;,01,
&quot;Austria&quot;,02,
&quot;Belgium&quot;,03,
&quot;Canada&quot;,04,
&quot;Denmark&quot;,05,
&quot;DEX&quot;,06,
&quot;Finland&quot;,07,
&quot;Germany&quot;,08,
&quot;HQ&quot;,09,
&quot;Luxembourg&quot;,10,
&quot;Italy&quot;,11,
&quot;Japan&quot;,12,
&quot;Holland&quot;,13,
&quot;New Zealand&quot;,14,
&quot;Norway&quot;,15,
&quot;Poland&quot;,16,
&quot;Portugal&quot;,17,
&quot;Spain&quot;,18,
&quot;Sweden&quot;,19,
&quot;Switzerland&quot;,20,
&quot;UK&quot;,21,
&quot;USA&quot;,22,
&quot;France&quot;, 23,
null)</formula>
        <inlineHelpText>A numeric code that is representing the country 1=Australia, 2= Austria etc. Used in reports</inlineHelpText>
        <label>User Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Country_Text__c</fullName>
        <formula>Text(User_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Country - Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_full</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_HQ__c</fullName>
        <description>Used in reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reports</inlineHelpText>
        <label>User # (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID_18_digit__c</fullName>
        <description>Used also in ETM</description>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License__c</fullName>
        <description>Display the User License type</description>
        <formula>Profile.UserLicense.Name</formula>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_RCO__c</fullName>
        <description>Formula field to set the RCO belonging of a User depending on the user country selected.</description>
        <formula>Case(User_Country__c , 
&quot;Belgium&quot;,&quot;Northern Group&quot;,
&quot;Holland&quot;,&quot;Northern Group&quot;,
&quot;Austria&quot;,&quot;DACH&quot;,
&quot;BEX&quot;,&quot;Undefinied&quot;,
&quot;Germany&quot;,&quot;DACH&quot;,
&quot;Sweden&quot;,&quot;Northern Group&quot;,
&quot;Norway&quot;,&quot;Northern Group&quot;,
&quot;Finland&quot;,&quot;Northern Group&quot;,
&quot;Denmark&quot;, &quot;Northern Group&quot;,
&quot;HQ: SE&quot;, &quot;Non-RCO&quot;,
&quot;HQ: DE&quot;, &quot;Non-RCO&quot;,
&quot;HQ: NL&quot;, &quot;Non-RCO&quot;, 
&quot;China&quot;,&quot;APAC&quot;,
&quot;Japan&quot;,&quot;APAC&quot;,
&quot;Australia&quot;,&quot;APAC&quot;,
&quot;New Zealand&quot;,&quot;APAC&quot;,
&quot;Korea&quot;,&quot;APAC&quot;,
&quot;South Korea&quot;, &quot;APAC&quot;,
&quot;Taiwan&quot;,&quot;APAC&quot;,
&quot;Thailand&quot;,&quot;APAC&quot;,
&quot;Hong Kong&quot;,&quot;APAC&quot;,
&quot;Vietnam&quot;,&quot;APAC&quot;,
&quot;Philippines&quot;, &quot;APAC&quot;,
&quot;Malaysia&quot;,&quot;APAC&quot;,
&quot;Singapore&quot;, &quot;APAC&quot;,
&quot;Indonesia&quot;, &quot;APAC&quot;,
&quot;India&quot;,&quot;Eastern Group&quot;,
&quot;Brazil&quot;, &quot;LATAM&quot;,
&quot;Turkey&quot;,&quot;Eastern Group&quot;,
&quot;Russia&quot;,&quot;Eastern Group&quot;,
&quot;Ukraine&quot;,&quot;Eastern Group&quot;,
&quot;Belarus&quot;,&quot;Eastern Group&quot;,
&quot;U.A.E&quot;,&quot;Eastern Group&quot;,
&quot;Kuwait&quot;,&quot;Eastern Group&quot;,
&quot;Saudi Arabia&quot;,&quot;Eastern Group&quot;,
&quot;Egypt&quot;,&quot;Eastern Group&quot;,
&quot;Poland&quot;, &quot;Northern Group&quot;,
&quot;South Africa&quot;, &quot;Eastern Group&quot;,
&quot;Distributor Markets&quot;, &quot;Undefinied&quot;,
&quot;Canada&quot;,&quot;North America&quot;,
&quot;France&quot;, &quot;Southern Group&quot;,
&quot;Spain&quot;, &quot;Southern Group&quot;,
&quot;Italy&quot;, &quot;Southern Group&quot;,
&quot;Switzerland&quot;, &quot;DACH&quot;,
&quot;Portugal&quot;, &quot;Southern Group&quot;,
&quot;UK&quot;, &quot;Northern Group&quot;,
&quot;USA&quot;, &quot;North America&quot;,
&quot;Not yet defined&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the RCO belonging of a User depending on the user country selected.</inlineHelpText>
        <label>User RCO</label>
        <type>Text</type>
    </fields>
</CustomObject>